* Fixed issues identifed by static analysis (!926)
* Fixed issue with findstar command when running from a python script (#1782)
* Fixed issue with auto-applying ICC profiles in stretch tools if nothing is done (reverts correctly) (#1768)
* Fixed issue in SPCC where it would complain about missing OSC BB filter when in NB mode
* Fixed a crash in the seqcosme command

**Improvements:**
* Compiled .pyc scripts are now only shown in the scripts menu if their magic number matches the available intepreter
* Centre the background extraction grid vertically instead of starting at the image edge and having a gap (#1741)
* Right-click scripts directly from the script menu to open them in the editor
* Optimize image preview, allow colour previews and improve preview stretching to use autostretch, add new large preview size at 512px
* Added SirilInterface.get_image_from_file() method
* Added new sirilpy methods for getting and setting GUI properties (sliders, STF, pan offsets, zoomlevel)
* Improved sirilpy get_seq_frame() and get_image_from_file() so they now populate FFit.header and .icc_profile
* Added Search box in the Script treeview
* Made reading astrometric solution more robust to CDELT/PC matrices not following the expected formalism (#1770)
* Added SirilInterface.analyse_image_from_file(), .undo(), .redo() and .clear_undo_history()
* Approved use of PyQt6 for creating python script GUIs (now confident it is problem free on all target OSes)
* Added some plate solution-related keywords to FKeywords sirilpy class. (#1779)
* Replaced the confusing clip/rescale popup with a heuristic that generally does the right thing. (!931)

siril 1.4.0-beta3
07/11/25

**Fixes:**
* Fixed crash when opening 8-bit XISF file (#1638)
* Fixed `match stars in selection` option for global registration (#1644)
* Fixed an issue where image processing dialogs could fail to unblock python scripts when closed.